compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__arithmetic_const_ops-33.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "-3 mod 10"

---
InnerCtx {
    eval_infos: [
        EvalInfo { unit_id: UnitId(HirId(Idx::<HirNode>(5))), span: Span { file: None, range: 11..20 }, state: Value(Integer(ConstInt { magnitude: 7, sign: Positive, width: As32 })) },
    ],
    var_to_expr: {
        GlobalDefId(UnitId(HirId(Idx::<HirNode>(5))), DefId(0)): ConstExpr { id: 0 },
    },
}
ConstExpr { id: 0 } -> Integer(ConstInt { magnitude: 7, sign: Positive, width: As32 })


