compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__arithmetic_const_ops-35.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "-3 mod -10"

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: 11..21, state: Value(Integer(ConstInt { magnitude: 3, sign: Negative, width: As32 })) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> Integer(ConstInt { magnitude: 3, sign: Negative, width: As32 })

