compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__arithmetic_const_ops-36.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: " 3.0 mod 10.0"

---
InnerCtx {
    eval_infos: [
        EvalInfo { unit_id: UnitId(0), span: Span { file: None, range: 12..24 }, state: Value(Real(3.0)) },
    ],
    var_to_expr: {
        GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
    },
}
ConstExpr { id: 0 } -> Real(3.0)


