compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__arithmetic_const_ops-38.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: " 3.0 mod -10.0"

---
"_"@(FileId(1), 6..7) -> Real(-7.0)


