compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__arithmetic_const_ops-4.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 3 div 2

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_state: [
                Value(Int(1)),
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
