compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__arithmetic_const_ops-42.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "-2 ** 4"

---
"_"@(FileId(1), 6..7) -> Integer(ConstInt { magnitude: 16, sign: Negative, width: As32 })


